<resources>
    <string name="app_name">123GO</string>
    <string name="welcom_btn">Skip</string>
    <string name="app_title">HALP</string>
    <string name="login_label"> Login </string>
    <string name="who_you_are"> Who you are? </string>
    <string name="hospital"> Hospital</string>
    <string name="house_nursing"> Nursing Home </string>
    <string name="patient"> Patient </string>
    <string name="accepted">Accepted</string>
    <string name="waiting_start">Waiting start</string>
    <string name="optional">Optional</string>
    <string name="navigationbottom_warning"> You cannot leave in this stage </string>
    <string name="homelogin_notice"> This feature is coming soon </string>
    <string name="trip_remark">Remarks </string>
    <string name="dialog_remark_title"> Write something </string>
    <string name="schedule_ride_notification"> You have a notification from schedule ride </string>
    <string name="schedule_detail"> Schedule Detail </string>
    <string name="submit_schedule_title"> REGISTER SCHEDULE </string>
    <string name="something_was_wrong"> Something was wrong </string>
    <string name="ferry_terminals"> Trip Distance: </string>
    <string name="a_and_e"> A&amp;E </string>
    <string name="imh"> IMH </string>
    <string name="airport_tarmac">Type car</string>
    <string name="base_price"> Base price </string>
    <string name="distance_price"> Distance price </string>
    <string name="extra_time_price"> Extra time price </string>
    <string name="tax_price"> Tax price </string>
    <string name="txt_notification">Notification</string>
    <string name="txt_none">None</string>
    <string name="txt_select_btn_route">Select Prefered Route</string>
    <string name="txt_choose_a_payment">Choose a payment</string>
    <string name="staircase_less_80"> Trip Duration: </string>
    <string name="name_step_frag_one">Enjoy a balance lifestyle</string>
    <string name="name_step_frag_two">The trip fare is fair</string>
    <string name="name_step_frag_three">Earn decent income</string>
    <string name="body_text_step_wellcome">The first mate and his Skipper too will do their very comfortable in their tropic island nesb</string>
    <string name="title_fragment_account">Account</string>
    <string name="txt_bill_detail">Bill Detail</string>
    <string name="txt_total_pay">Total Fare</string>
    <string name="txt_title_rating">Ratings</string>
    <string name="txt_name_profile">Name</string>
    <string name="txt_name_profilepicture">PROFILE PICTURE</string>
    <string name="dolo_singapor">S$</string>
    <string name="toast_logout_notifi">You have logged in other device!</string>
    <string name="top_up_successfully">Top up to wallet successfully!</string>
    <string name="txt_top_up_history">Top Up History</string>
    <string name="txt_type_top_up_wallet">Type Top Up</string>
    <string name="txt_no_booking">No Booking</string>
    <string name="cannot_back_on_thetrip">Can not back! Because you are on a trip</string>
    <string name="txt_request_is_canceled_paypal">Request is canceled</string>
    <string name="txt_toast_not_found_current_location">Unable to get current location</string>
    <string name="txt_booking_success">Thank you for traveling with 123GO!</string>
    <string name="txt_content_booking_success">Your booking taxi has been confirmed, our diver will pickedup in 5 minutes, have a happy journey!</string>
    <string name="btn_booking_success">BACK TO HOME</string>
    <string name="txt_title_dialog_cancel_trip">You are sure you want to cancel this booking ?</string>
    <string name="txt_title_dialog_gps">Hello, Welcome to 123GO!</string>
    <string name="txt_content_dialog_gps">Choose your current location to start find the taxi near you</string>
    <string name="txt_btn_gps">USE CURRENT LOCATION</string>
    <string name="txt_exit_gps">NO AND EXIT 123GO</string>
    <string name="txt_dialog_pay_ewallet">Payment With E-Wallet</string>
    <string name="txt_content_pay_ewallet">Your e-wallet will be deducted</string>
    <string name="txt_content_ratings">You feedback will help to improve our driving experience</string>
    <string name="txt_toast_event_back_rating">Please rate stars before exiting</string>
    <string name="txt_taxi_comingsoon">Taxi is not available now. Coming soon!</string>
    <string name="txt_terms_conditions">Terms And Conditions</string>
    <string name="txt_i_gree_terms_conditons">I agree to the Terms and Conditions as well as Privacy Policy</string>
<string name="txt_change_password">Change Password</string>
    <string name="txt_old_changepassword">Old password</string>
    <string name="txt_new_changepassword">New password</string>
    <string name="oxygen_tank"> Oxygen tank </string>
    <string name="trips"> Trips </string>
    <string name="history_payment"> History Payment </string>
    <string name="block_number"> Block number </string>
    <string name="unit_number"> Unit number </string>
    <string name="floor"> Floor </string>
    <string name="ward"> Ward </string>
    <string name="postal"> Postal </string>
    <string name="purpose"> Purpose </string>
    <string name="special_request"> Special Request </string>
    <string name="preferred_username"> Preferred Username </string>
    <string name="contact_name"> Contact Name </string>
    <string name="contact_number"> Contact Number </string>
    <string name="address"> Address </string>
    <string name="family_member_name"> Family member name </string>
    <string name="family_member"> Family member </string>
    <string name="mobile"> Mobile </string>
    <string name="email_address"> Email Address </string>
    <string name="house_unit"> House unit </string>
    <string name="plate_number">Vehicle plate number</string>
    <string name="home_number"> Home number </string>
    <string name="room_number"> Room number </string>
    <string name="bed_number"> Bed number </string>
    <string name="time_of_discharge">Time of discharge</string>
    <string name="street_name"> Street name </string>
    <string name="weight"> Weight </string>
    <string name="lift_landing">Lift landing</string>
    <string name="stair"> Stairs </string>
    <string name="no_stair"> No Stairs </string>
    <string name="low_stair"> Low Stairs </string>
    <string name="stretcher"> Stretcher </string>
    <string name="wheel_chair"> Wheel chair </string>
    <string name="oxygen">Oxygen</string>
    <string name="oxygen_liter"> Picture car selected </string>
    <string name="escorts"> Escorts </string>
    <string name="patient_name"> Patient name </string>
    <string name="additional_patient_information"> Additional Patient\'s information </string>
    <string name="case_type"> Case Type</string>
    <string name="assistive_device"> Assistive device </string>
    <string name="submit"> SUBMIT </string>
    <string name="billing_info">Billing info</string>
    <string name="hospital_discharge_warning_title">Notice for Discharge</string>
    <string name="hospital_discharge_warning_content">For hospital discharge case, please use schedule function</string>
    <string name="cancellation_policy_title">Cancellation Policy</string>
    <string name="cancellation_policy_content">Trip is fully chargeable if cancellation is done less than 2 hours before scheduled trip</string>
    <string name="country_code_warning"> Do not input your country code in phone number field </string>
    <string name="please_select_your_payment_option">Please select your payment option below</string>
    <string name="txt_schedule_warning_content">The duration of the pick-up time and the medical time is too little with the time of the trip. Are you sure you want to book a schedule?</string>
    <string name="txt_schedule_warning_title"> Schedule alerts </string>
    <string name="ambulance_operator_notice">Choose another 123go diver below if you want!</string>
    <string name="another_ambulance_operator">Choose another type car here!</string>
    <string name="edittext_empty_notice"> This field cannot be empty</string>
    <string name="txt_hourly_booking"> Rent by hour </string>
    <string name="edittext_inapproriate_notice"> This field is invalid</string>
    <string name="txt_patient_conditions"> Patient condition </string>
    <string name="txt_payment_mode"> Payment Mode:</string>
    <string name="add_schedule"> Add schedule </string>
    <string name="weight_less_than_eighty" translatable="false"> 0KG - 80KG</string>
    <string name="weight_over_eighty" translatable="false"> 80KG - 100KG</string>
    <string name="weight_over_one_hundred" translatable="false"> 100KG - 120KG </string>
    <string name="weight_over_one_hundred_and_twenty" translatable="false"> 120KG - 150KG </string>
    <string name="medical_appointment"> Medical appointment </string>
    <string name="ad_hoc"> AD - HOC (1 way) </string>
    <string name="airport_changi">Changi Airport</string>
    <string name="airport_selectar">Selectar Airport</string>
    <string name="hospital_discharge"> Hospital discharge (1 way) </string>
    <string name="any_ambulance"> Any 123Go Diver </string>
    <string name="action_home"> Home </string>
    <string name="action_history"> History </string>
    <string name="action_schedule"> Schedule </string>
    <string name="action_account"> Account </string>
    <string name="pickup_type"> Pickup type </string>
    <string name="login_email">Email Id Or Number Phone</string>
    <string name="email_mobile">Email or Phone number</string>
    <string name="login_Password">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="forgot_pass_btn">Forgot Password</string>
    <string name="new_user_btn">New to 123GO ? </string>
    <string name="txt_signup_now">Signup now </string>
    <string name="req_pass_btn">Request Password</string>
    <string name="txt_faild_server">Failed Server!</string>
    <string name="register_btn">Register</string>
    <string name="forgot_txt_note">Please Enter Email Id to Receive Password</string>
    <string name="full_name">Fullname</string>
    <string name="txt_accept_term_condition">You should accept our Term and Condition first</string>
    <string name="last_Name">Last Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="phn_no">Phone Number</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_currency">Select Currency</string>
    <string name="login_cancelled">login cancelled</string>
    <string name="login_failed">login failed</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_save">SAVE</string>
    <string name="dialog_exit_caps">EXIT</string>
    <string name="dialog_exit_text">Are you sure exit 123GO ?</string>
    <string name="txt_current_loc">Pickup location</string>
    <string name="txt_cancel">Cancel</string>
    <string name="et_promocode">Enter Promo Code</string>
    <string name="btn_apply_promo">Apply Promo</string>
    <string name="tv_promocode_note">If you have Promo code, enter it and save on your ride.</string>
    <string name="txt_note_choose">This feature is <b>Disabled</b> in <b>DEMO</b>, to avoid Vandalism of the Demo</string>
    <string name="pic_worn">You can choose the picture from Gallery -or- Use Camera to create one.</string>
    <string name="txt_note">Note: </string>
    <string name="txt_ok">Ok</string>
    <string name="txt_enter_card">Please Enter Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="btn_confirm">Confirm</string>
    <string name="txt_pay_cash">Pay by Cash</string>
    <string name="txt_pay_paypal">Pay by Paypal</string>
    <string name="txt_pay_wallet">Pay by E-Wallet</string>
</resources>