<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:icon="@drawable/home_map_marker"
        app:showAsAction="always"
        android:title="@string/action_home"/>

    <!--<item android:id="@+id/action_nurse_list_schedule"
        android:title="Schedule"
        app:showAsAction="always"
        android:icon="@drawable/ic_list_schedule"/>-->

    <item android:id="@+id/action_history"
        android:icon="@drawable/clock_alert"
        app:showAsAction="always"
        android:title="@string/action_history"/>

    <item android:id="@+id/action_nurse_list_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="always"
        android:icon="@drawable/ic_schedule_temp"/>

    <item android:id="@+id/action_account"
        android:icon="@drawable/account_outline"
        app:showAsAction="always"
        android:title="@string/action_account"/>

</menu>