<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/txt_notification"
        android:textColor="@color/color_red_main"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_show_thereason_canceled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_10ssp"
        android:text="@string/txt_content_ratings" />
    <Button
        android:id="@+id/btn_dialog_thereason_confirm"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_14ssp"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/btn_confirm"
        android:background="@color/color_btn_main"
        android:layout_height="wrap_content" />

</LinearLayout>