<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/transparent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/paygate_color"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_card_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/txt_enter_card"
                android:inputType="number"
                android:padding="8dp"
                android:singleLine="true"
                android:nextFocusForward="@+id/et_card_month"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.5">

                <EditText
                    android:id="@+id/et_card_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.2"
                    android:hint="@string/mm"
                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_card_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:hint="@string/yy"
                    android:inputType="number"
                    android:maxLength="4"
                    android:imeOptions="actionNext"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_card_ccv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:hint="@string/cvv"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/et_card_holder_fname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_card_holder_lname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:hint="@string/last_Name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <!--   <ImageView
                       android:layout_width="0dp"
                       android:layout_height="50dp"
                       android:layout_gravity="center|end"
                       android:layout_weight="0.5"
                       android:src="@drawable/mastercard" />-->
            </LinearLayout>

            <EditText
                android:id="@+id/et_card_holder_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_card_holder_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/phn_no"
                android:inputType="phone"
                android:padding="8dp"
                android:visibility="gone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_floating_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/card_view"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:visibility="visible"
        app:srcCompat="@android:drawable/checkbox_on_background"
        app:backgroundTint="@color/paygate_color"
        app:fabSize="normal" />

</RelativeLayout>