<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_app"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo_application"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/background_wellcome" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_location_gps" />

    <TextView
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/txt_title_dialog_gps"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:maxLines="2"
        android:textStyle="bold"
        android:text="@string/txt_content_dialog_gps"
        android:textColor="@color/gray600"
        android:textSize="@dimen/_12sdp" />
    <Button
        android:id="@+id/btn_select_gps"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:drawableLeft="@drawable/ic_destination_all"
        android:gravity="center"
        android:background="@color/color_background_main"
        android:text="@string/txt_btn_gps"
        android:textStyle="bold"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_14sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_exit_gps"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_exit_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>