<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_with_shadow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_login_userid"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/tv_promocode_note"
            android:textColor="@color/lightblueA700"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_promocode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/square_editbox"
            android:hint="@string/et_promocode"
            android:inputType="text"
            android:maxLines="1"
            android:padding="6dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/cencel_promocode"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="@color/lightblueA700"
                android:gravity="center"
                android:shadowDy="0"
                android:text="@string/txt_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/apply_promocode"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:background="@color/lightblueA700"
                android:gravity="center"
                android:shadowDy="0"
                android:text="@string/btn_apply_promo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>